Fix alignment of monospace code blocks

--- a/css/main.scss
+++ b/css/main.scss
@@ -132,6 +132,7 @@ nav.pagination {
 
 pre {
   -webkit-text-size-adjust: none;
+  word-spacing: 0;
 }
 
 .hidden {
